# python-meteosclient

./: .gitreview  CONTRIBUTING.rst  HACKING.rst  README.md  README.rst  openstack-common.conf  requirements.txt  run_tests.sh  setup.cfg  test-requirements.txt  tox.ini
doc/source/: conf.py  index.rst
meteosclient/: client.py  shell.py  version.py
meteosclient/api/: base.py  client.py  datasets.py  experiments.py  learnings.py  model_evaluations.py  models.py  shell.py  templates.py
meteosclient/openstack/common/: _i18n.py  cliutils.py
meteosclient/openstack/common/apiclient/: auth.py  exceptions.py
meteosclient/tests/unit/: base.py  test_base.py  test_templates.py
sample/data/: decision_tree_data.txt  kmeans_data.txt  linear_data.txt  logistic_data.txt  recommendation_data.txt
sample/json/: dataset_download.json  dataset_parse.json  dataset_split.json  experiment.json  learning.json  model_decision_tree.json  model_evaluation.json  model_kmeans.json  model_linear.json  model_logistic.json  model_recommendation.json  model_recreate.json  model_word2vec.json  template.json
