[metadata]
name = python-meteosclient
summary = Client library for Meteos API
description-file =
    README.rst
license = Apache License, Version 2.0
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://github.com/openstack/python-meteosclient
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[global]
setup-hooks = pbr.hooks.setup_hook

[files]
packages =
    meteosclient

[entry_points]
console_scripts =
    meteos = meteosclient.shell:main

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[wheel]
universal = 1
